--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         #main-container {
             width: 1366px;
             height: 768px;
-            background-image: url('Bez nazwy-1_Obszar roboczy 1.png');
+            background-image: url('https://zjava1.github.io/openwhen/Bez%20nazwy-1_Obszar%20roboczy%201.png'); /* Zmiana ścieżki do obrazu */
             background-size: cover;
             background-position: center;
             position: relative;
@@ -154,7 +154,7 @@
             }
 
             // Zmień tło na podstawie numeru strony
-            const newImagePath = `page${pageNumber}.png`;
+            const newImagePath = `https://zjava1.github.io/openwhen/page${pageNumber}.png`; // Zmiana ścieżki do obrazu
             container.style.backgroundImage = `url('${newImagePath}')`;
 
             // Aktualizacja poprzedniej strony
